fixed gaps in mobile bg stripes

--- a/public/jqt/themes/scss/apple.scss
+++ b/public/jqt/themes/scss/apple.scss
@@ -1,5 +1,5 @@
 $base-color: #768BA7;
-$page-background-color: #CBD2D8;
+$page-background-color: #480000;
 $highlight-color: #3366CC;
 
 $list-background-color: #fff;
